src/test/ui/nll/return-ref-mut-issue-46557.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/return-ref-mut-issue-46557.rs:17:21
   |
LL |   fn gimme_static_mut() -> &'static mut u32 {
   |  ___________________________________________-
LL | |     let ref mut x = 1234543; //~ ERROR borrowed value does not live long enough [E0597]
   | |                     ^^^^^^^ temporary value does not live long enough
LL | |     x
LL | | }
   | | -
   | | |
   | |_temporary value only lives until here
   |   borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
